keel/k/keel.cicd-01-gke.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keel
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keel
  name: keel
  namespace: keel
spec:
  ports:
  - name: keel
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: keel
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keel
  name: keel
  namespace: keel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keel
  template:
    metadata:
      labels:
        app: keel
    spec:
      containers:
      - command:
        - /bin/keel
        image: keelhq/keel:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9300
          initialDelaySeconds: 30
          timeoutSeconds: 10
        name: keel
        ports:
        - containerPort: 9300
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      serviceAccountName: keel
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: keel
spec:
  rules:
  - host: keel.130.211.31.31.nip.io
    http:
      paths:
      - backend:
          serviceName: keel
          servicePort: 9300
        path: /*
